--- a/src/assets/_text.scss
+++ b/src/assets/_text.scss
@@ -1,5 +1,9 @@
 body, html {
-    @apply font-sans text-white;
+    @apply font-sans text-mediumGrey;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    @apply text-white;
 }
 
 h1, h3, h4 {
@@ -11,23 +15,31 @@ h1 {
     @apply font-bold;
 }
 
+.single-product-header h1 {
+    @screen lg {
+        font-size: 159px;
+    }
+}
+
 h2 {
     @apply text-h2 leading-h2;
 }
 
 h3 {
-    @apply text-h1 leading-h3;
+    @apply text-h3 leading-h3;
+    @apply mb-8
 }
 
 h4 {
-    @apply text-h2 leading-h4;
+    @apply text-h4 leading-h4;
 }
 
 h5 {
-    @apply text-h1 leading-h5;
+    @apply text-h5 leading-h5;
+    @apply mb-8
 }
 
 h6 {
-    @apply text-h2 leading-h6;
+    @apply text-h6 leading-h6;
     @apply font-medium;
 }
